commiting updates - Improved page layout and added images

--- a/jewelry-project/index.html
+++ b/jewelry-project/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img src="logo.png" alt="logo reading 'Mangata & Gallo" />
+      <img class="logo" src="logo.png" alt="logo reading 'Mangata & Gallo" />
     </header>
     <nav>
       <ul>
@@ -25,30 +25,33 @@
       </section>
       <section class="info">
         <div>
-          <img src="" alt="" />
+          <img src="ring.png" alt="image of gold ring" />
+          <h2>Rings</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
-            accusantium doloremque optio perferendis. Expedita labore esse
-            mollitia fuga facilis autem aut modi? Reprehenderit ducimus
-            obcaecati odio eius, illo qui in.
+            With unique styles crafted by our in-house design team, our
+            step-by-step process makes it easy to create the perfect engagement
+            ring. Choose from natural diamonds, lab-grown diamonds, and natural
+            gemstones for a one-of-a-kind ring.
           </p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="necklace.png" alt="image of dimamond necklace" />
+          <h2>Necklaces</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
-            accusantium doloremque optio perferendis. Expedita labore esse
-            mollitia fuga facilis autem aut modi? Reprehenderit ducimus
-            obcaecati odio eius, illo qui in.
+            Our necklaces are breathtaking pieces that will add a touch of
+            elegance and sophistication to any outfit. These exquisite pieces
+            features a delicate chain made of high-quality sterling silver,
+            which is both durable and hypoallergenic.
           </p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="rolex.png" alt="image of Rolex watch" />
+          <h2>Watches</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
-            accusantium doloremque optio perferendis. Expedita labore esse
-            mollitia fuga facilis autem aut modi? Reprehenderit ducimus
-            obcaecati odio eius, illo qui in.
+            Our watches benefit from all the fundamental features of the Oyster
+            Perpetual collection – excellent chronometric precision, a
+            waterproof Oyster case, and self-winding of the movement via a
+            Perpetual rotor.
           </p>
         </div>
       </section>
