final project - send for grade

--- a/jewelry-project/index.html
+++ b/jewelry-project/index.html
@@ -23,6 +23,10 @@
       <section>
         <video src="bgvideo.mp4" autoplay muted></video>
       </section>
+      <h1 id="tagLine">
+        Unleash your inner sparkle with our boutique jewelry.
+      </h1>
+
       <section class="info">
         <div>
           <img src="ring.png" alt="image of gold ring" />
