--- a/jewelry-project/index.html
+++ b/jewelry-project/index.html
@@ -14,9 +14,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Products</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="gallery.html">About</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About</a></li>
       </ul>
     </nav>
     <main>
